Closed
Bug 1799579
Opened 3 years ago
Closed 2 years ago
Navigation to templated method of templated class from a call site inside that class
Categories
(Webtools :: Searchfox, defect)
Webtools
Searchfox
Tracking
(firefox114 fixed)
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| firefox114 | --- | fixed |
People
(Reporter: botond, Assigned: botond)
References
Details
Attachments
(1 file)
Steps to reproduce
Have Searchfox index the following code:
template <typename> struct Point {};
template <typename>
struct Foo {
template <typename F>
void Project(Point<F>);
void Bar() {
Point<float> p;
Project(p);
}
};
Expected results
Navigation from the call to Project() goes to the definition.
Actual results
No navigation is offered at the call.
| Assignee | ||
Comment 1•2 years ago
|
||
WIP patch at https://github.com/mozsearch/mozsearch/pull/613
| Assignee | ||
Comment 2•2 years ago
|
||
Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fbed895aa817
Handle OverloadExpr in MozSearchIndexer. r=asuth
Comment 4•2 years ago
|
||
| bugherder | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•