Bug 1799579 - Handle OverloadExpr in MozSearchIndexer. r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D175207